# synapse

./: Cargo.toml  README.md
src/: main.rs
src/shaders/: add.glsl  game_of_life_step.glsl  mandelbrot.glsl  random.glsl
